# transcribe-service

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  local.yml  pyproject.toml  pyrefly.toml  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml
benchmark/: results.json  whisper.py  whispercpp.py
html-client/: form.html  transcribe.js
local-docker/: local.yml  otel-collector-config.yml  prometheus.yml
local-docker/grafana/dashboards/: dashboards.yml
local-docker/grafana/dashboards-json/: transcriptor.json
transcribe-batch/: batchfilesdb.py  command.py  execution.py  lockfile.py  metrics_writer.py  predicttime.py  process-batch.py  processedfiles.py  processedfilesdb.py  pyproject.toml  requirements.txt  sendmail.py  similarusers.py  usage.py
transcribe-batch/docker/: Dockerfile  Dockerfile-models  entry-point.sh
transcribe-batch/email-templates/: transcription-error.html  transcription-error.txt  transcription-finished.html  transcription-finished.txt
transcribe-batch/src/transcribe_batch/: batchfilesdb.py  main.py  sendmail.py
transcribe-batch/src/transcribe_batch/telemetry/: metrics.py
transcribe-batch/tests/: testbatchfilesdb.py  testexecution.py  testlockfile.py  testpredicttime.py  testprocessfiles.py  testsimilarusers.py  testusage.py
transcribe-batch/whisper/: __init__.py
transcribe-core/: pyproject.toml
transcribe-core/src/transcribe_core/: batchfilesdb.py  processedfiles.py  usage.py
transcribe-core/tests/: testbatchfilesdb.py  testprocessfiles.py  testusage.py
transcribe-service/: batchfilesdb.py  metrics.py  predicttime.py  processedfiles.py  processedfilesdb.py  pyproject.toml  requirements.txt  similarusers.py  telemetry.py  transcribe-service.py  usage.py
transcribe-service/docker/: Dockerfile  entry-point.sh
transcribe-service/src/transcribe_service/: constants.py  logging.py  main.py  temp_main.py  utils.py
transcribe-service/src/transcribe_service/routes/: file.py  stats.py  uuid.py
transcribe-service/src/transcribe_service/routes/legacy/: file.py  uuid.py
transcribe-service/src/transcribe_service/services/: file.py  stats.py  uuid.py
transcribe-service/src/transcribe_service/telemetry/: metrics.py
