[project]
name = "transcribe-batch"
version = "0.1.0"
description = "A service for transcribing catalan audio files."
requires-python = ">=3.13"
dependencies = [
  "psutil",
  "ctranslate2==4.7.1",
  "faster-whisper==1.2.1",
  "langdetect==1.0.9",
  "Jinja2==3.1.6",
  "whisper-ctranslate2",
  "transcribe-core",
  "opentelemetry-api>=1.43.0",
  "opentelemetry-sdk>=1.43.0",
  "opentelemetry-exporter-otlp-proto-http>=1.43.0",
]

[tool.uv.sources]
transcribe-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
